--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <body>
   <img src="img/kums.jpg">
   <h1>Kumaran</h1>
-  <p class="description">iOS and Android Developer. NativeScript Ambassador. </p>
+  <p class="description">NativeScript(iOS & Android) and Angular Developer | Front-End Developer | NativeScript Ambassador. </p>
   <ul>
     <li>
       <a href="mailto:kumarandena@gmail.com">Email</a>
@@ -88,6 +88,9 @@
     </li>
     <li>
       <a href="https://github.com/kumarandena" target="_blank">GitHub</a>
+    </li>
+    <li>
+      <a href="https://fs-ossc.firebaseapp.com" target="_blank">OSS Activities</a>
     </li>
     <li>
       <a href="https://twitter.com/kumarandena" target="_blank">Twitter</a>
