--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
       <a href="https://github.com/kumarandena" target="_blank">GitHub</a>
     </li>
     <li>
+      <a href="https://market.nativescript.org/author/kumarandena" target="_blank">NativeScript</a>
+    </li>
+    <li>
       <a href="https://fs-ossc.firebaseapp.com" target="_blank">OSS Activities</a>
     </li>
     <li>
