firebase web.app domain added

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <a href="https://market.nativescript.org/author/kumarandena" target="_blank">NativeScript</a>
     </li>
     <li>
-      <a href="https://fs-ossc.firebaseapp.com" target="_blank">OSS Activities</a>
+      <a href="https://fs-ossc.web.app" target="_blank">OSS Activities</a>
     </li>
     <li>
       <a href="https://twitter.com/kumarandena" target="_blank">Twitter</a>
